# honmoon

./: .gitignore  .worktreeinclude  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  PRODUCT.md  README.md  codecov.yml  eslint.config.mjs  llms.txt  mise.toml  orca.yaml  package.json
.claude/: settings.json
.claude/agent-memory/please-implement-executor/: MEMORY.md  honmoon-secret-tokenization.md
.claude/agent-memory/review-review-code-reviewer/: MEMORY.md  feedback_trust_the_header_regression_pattern.md  project_agents_md_rules.md
.claude/agent-memory/review-review-pr-test-analyzer/: MEMORY.md  mitm_test_harness.md
.claude/agent-memory/review-review-security-reviewer/: MEMORY.md  hook-salt-security-model.md  project-redaction-failopen-design.md
.claude/agent-memory/review-review-silent-failure-hunter/: MEMORY.md  feedback_framing_deliberate_skips.md
.github/workflows/: ci.yml  codspeed.yml  deploy-web.yml  deploy-wiki.yml
.please/: config.yml
.please/docs/: tracks.jsonl
.please/docs/decisions/: 0001-adopt-pingora-http-data-plane.md  0002-phase1-connect-proxy-on-tokio.md  0003-adopt-hudsucker-for-tls-termination.md  index.md
.please/docs/knowledge/: product-guidelines.md  product.md  tech-stack.md  workflow.md
.please/docs/review/: rejected-findings.jsonl
.please/docs/tracks/: tech-debt-tracker.md
.please/docs/tracks/active/landing-page-20260712/: metadata.json  plan.md
.please/docs/tracks/active/phase-2-cel-http-facts/: metadata.json
.please/docs/tracks/active/phase-3-sql-k8s-parsers/: metadata.json  spec.md
.please/docs/tracks/active/secret-tokenization-20260707/: metadata.json  plan.md
.please/docs/tracks/completed/landing-page-20260712/: metadata.json  plan.md  spec.md
.please/docs/tracks/completed/phase-2-cel-http-facts/: metadata.json  spec.md
.please/docs/tracks/completed/phase-3-sql-k8s-parsers/: metadata.json
.please/docs/tracks/completed/secret-tokenization-20260707/: metadata.json  plan.md  spec.md
apps/dashboard/: AGENTS.md  index.html  package.json  vite.config.ts
apps/dashboard/src/: App.tsx  api.ts  format.ts  hooks.ts
apps/dashboard/src/components/: Approvals.tsx  AuditLog.tsx  DecisionBadge.tsx  Overview.tsx  PolicyView.tsx
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx
apps/web/src/hooks/: useGateScene.ts  useMembrane.ts  useReveal.ts  useScrollFlag.ts
apps/web/src/lib/: links.ts  prefersReducedMotion.ts  scrollToPolicy.ts
apps/web/src/sections/: Barrier.tsx  Cta.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Membrane.tsx  Modes.tsx  OpenCore.tsx  Policy.tsx  Threat.tsx  TopNav.tsx
apps/web/src/styles/: globals.css
crates/: AGENTS.md  CLAUDE.md
crates/honmoon-cli/: Cargo.toml
crates/honmoon-cli/src/: hook.rs  main.rs
crates/honmoon-cli/tests/: hook_transports.rs
crates/honmoon-core/: Cargo.toml
crates/honmoon-core/benches/: policy_engine.rs
crates/honmoon-core/examples/: pii_scan.rs
crates/honmoon-core/src/: audit.rs  claude_code_hook.rs  engine.rs  lib.rs  pii.rs  protocols.rs  redact.rs  secret_detect.rs  secret_tokenizer.rs
crates/honmoon-core/src/secret_tokenizer/: mod.rs  streaming.rs
crates/honmoon-core/src/secret_tokenizer/streaming/: mod.rs  tests.rs
crates/honmoon-core/tests/: secret_tokenizer_public_api.rs
crates/honmoon-mgmt/: Cargo.toml  build.rs
crates/honmoon-mgmt/src/: lib.rs
crates/honmoon-mgmt/tests/: e2e.rs
crates/honmoon-proxy/: Cargo.toml
crates/honmoon-proxy/src/: approval.rs  body.rs  ca.rs  gateway.rs  lib.rs  mitm.rs
crates/honmoon-proxy/tests/: egress.rs  mitm.rs  redaction.rs
datasets/pii/: .gitignore  README.md  gate.ts  labels.yaml  schema.json  score.ts
docs/: business-model.md  pii-benchmark-goals.md  roadmap.md
policies/: agent.yaml
wiki/: AGENTS.md  index.md  llms-full.txt  llms.txt  package.json
wiki/.vitepress/: config.mts  gen-llms-full.mjs
wiki/.vitepress/theme/: custom.css  diagram-zoom.ts  index.ts
wiki/deep-dive/: architecture.md  control-plane.md  egress-gateway.md  policy-engine.md  protocol-parsing.md  roadmap-open-core.md
wiki/getting-started/: installation.md  overview.md  policy-authoring.md  quick-start.md
wiki/onboarding/: contributor-guide.md  executive-guide.md  product-manager-guide.md  staff-engineer-guide.md
