[package]
name = "honmoon-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Honmoon CLI — run / gateway / join"

[[bin]]
name = "honmoon"
path = "src/main.rs"

[dependencies]
honmoon-core.workspace = true
honmoon-proxy.workspace = true
honmoon-mgmt.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# `honmoon hook` (Claude Code plugin backend): parse the hook JSON payload and
# derive a stable per-session salt for byte-deterministic redaction (#19/#20).
serde_json.workspace = true
hmac.workspace = true
sha2.workspace = true
