[package]
name = "honmoon-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Honmoon policy engine, CEL evaluation, and protocol facts model"

[dependencies]
cel-interpreter = "0.10"
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
