[package]
name = "honmoon-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Honmoon policy engine, CEL evaluation, and protocol facts model"

[dependencies]
aho-corasick.workspace = true
cel-interpreter = "0.10"
hmac.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true

[dev-dependencies]
divan = { version = "5.0.1", package = "codspeed-divan-compat" }

[[bench]]
name = "policy_engine"
harness = false
