[package]
name = "honmoon-mgmt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Honmoon management API: audit query, approval queue, embedded dashboard"

[dependencies]
honmoon-core.workspace = true
honmoon-proxy.workspace = true
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
